Added new skin property: #TVSeries.LastOnlineUpdate (Displays Date/Time the last online update occured, useful for people that don't do automatic updates) and new skin translation #TVSeries.Translation.LastOnlineUpdate.Label.

--- a/MP-TVSeries/Resources/Languages/en(us).xml
+++ b/MP-TVSeries/Resources/Languages/en(us).xml
@@ -242,5 +242,6 @@
 	<string Field="NETWORK_ERROR_UNAVAILABLE_2" Original="Check your connection and try again">Check your connection and try again</string>
     
 	<string Field="Playlist" Original="Playlist">Playlist</string>
+  <string Field="LastOnlineUpdate" Original="LastOnlineUpdate">Last Online Update</string>
 	
 </strings>
