--- a/trunk/MP-TVSeries/Resources/Languages/es.xml
+++ b/trunk/MP-TVSeries/Resources/Languages/es.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="iso-8859-1"?>
-<!-- TVSeries translation file -->
+<!-- Moving Pictures translation file -->
 <!-- Spanish -->
-<!-- Last Upated 11 Jan 2010 -->
 <!-- Note: English is the fallback for any strings not found in other languages -->
 <strings>
   <string Field="Series" Original="Series">Serie</string>
@@ -26,8 +25,8 @@
   <string Field="Hide_summary_on_unwatched" Original="Hide the episode's summary on unwatched episodes">Ocultar resumen de los episodios no vistos</string>
   <string Field="on" Original="on">on</string>
   <string Field="off" Original="off">off</string>
-  <string Field="Play_Random_Episode" Original="Play Random Episode">Reproducir aleatoriamente un Episodio </string>
-  <string Field="Play_Random_First_Unwatched_Episode" Original="Play Random First Unwatched Episode">Reproducir aleatoriamente el primer Episodio no visto </string>
+  <string Field="Play_Random_Episode" Original="Play Random Episode">Reproducir aleatoriamente un episodio </string>
+  <string Field="Play_Random_First_Unwatched_Episode" Original="Play Random First Unwatched Episode">Reproducir aleatoriamente el primer episodio no visto </string>
   <string Field="Delete_that_series" Original="Delete that series?">¿Borrar esta serie?</string>
   <string Field="Delete_that_season" Original="Delete that season?">¿Borrar esta temporada?</string>
   <string Field="Delete_that_episode" Original="Delete that episode?">¿Borrar este episodio?</string>
@@ -57,7 +56,7 @@
   <string Field="Channels" Original="Channels">Canales</string>
   <string Field="Unwatched" Original="Unwatched">No visto</string>
   <string Field="Favourites" Original="Favourites">Favoritos</string>
-  <string Field="updateMI" Original="Update Mediainfo of local file">Actualizar Información de los archivos locales</string>
+  <string Field="updateMI" Original="Update Mediainfo of local file">Actualizar información de los archivos locales</string>
   <string Field="RateSeries" Original="Rate this Series">Valorar esta serie</string>
   <string Field="RateEpisode" Original="Rate this Episode">Valorar este episodio</string>
   <string Field="ResetRating" Original="Reset Rating">Borrar valoración</string>
@@ -76,7 +75,7 @@
   <string Field="FanDownloadingStatus" Original="Downloading {0} Fanart...">Descargando {0} Fanart...</string>
   <string Field="FanArtLocal" Original="Available locally">Disponible localmente</string>
   <string Field="FanArtOnline" Original="Available for downloading">Disponible para descargar</string>
-  <string Field="FanArtOnlineLoading" Original="loading {0} of {1} Fanart...">cargando {0} de {1} Fanart...</string>
+  <string Field="FanArtOnlineLoading" Original="loading {0} of {1} Fanart...">Cargando {0} de {1} Fanart...</string>
   <string Field="FanArtRandom" Original="Display random Fanart">Mostrar Fanart aleatorio</string>
   <string Field="FanArtNoneFound" Original="No Fanart could be found">No se encontró ningún Fanart</string>
   <string Field="CFS_Choose_Item" Original="Choose item">Elija elemento</string>
@@ -89,24 +88,24 @@
   <string Field="CFS_Available_Series" Original="Available Series">Series disponibles</string>
   <string Field="CFS_Select_Correct_Subtitle_Version" Original="Select desired subtitles version">Seleccione versión de subtítulos</string>
   <string Field="CFS_Select_Version" Original="Version:">Versión:</string>
-  <string Field="CFS_Choose_Correct_Episode" Original="Choose Correct Episode">Elija Episodio Correcto</string>
-  <string Field="CFS_Local_Episode_Index" Original="Local Episiode index:">Índice local de Episodios:</string>
-  <string Field="CFS_Available_Episode_List" Original="Available Episode list:">Listado de Episodios disponibles:</string>
+  <string Field="CFS_Choose_Correct_Episode" Original="Choose Correct Episode">Elija episodio correcto</string>
+  <string Field="CFS_Local_Episode_Index" Original="Local Episiode index:">Índice local de episodios:</string>
+  <string Field="CFS_Available_Episode_List" Original="Available Episode list:">Listado de episodios disponibles:</string>
   <string Field="CFS_Choose_Search_Site" Original="Choose search site:">Elija sitio de búsqueda:</string>
   <string Field="CFS_List_Search_Site" Original="List of search sites:">Listado de sitios de búsqueda:</string>
   <string Field="CFS_Found_Torrents" Original="Found torrents:">Torrents encontrados:</string>
   <string Field="CFS_Looking_For" Original="Looking for:">Buscando:</string>
-  <string Field="CFS_Choose_Correct_Season" Original="Choose correct season">Elija Temporada correcta</string>
-  <string Field="CFS_Local_Season_Index" Original="Local Season index:">Índice local de Temporadas:</string>
-  <string Field="CFS_Available_Seasons" Original="Available Seasons list:">Listado de Temporadas disponibles:</string>
-  <string Field="CYN_Subtitle_File_Replace" Original="Subtitle File Replace">Reemplazar Archivo de Subtítulos</string>
+  <string Field="CFS_Choose_Correct_Season" Original="Choose correct season">Elija temporada correcta</string>
+  <string Field="CFS_Local_Season_Index" Original="Local Season index:">Índice local de temporadas:</string>
+  <string Field="CFS_Available_Seasons" Original="Available Seasons list:">Listado de temporadas disponibles:</string>
+  <string Field="CYN_Subtitle_File_Replace" Original="Subtitle File Replace">Reemplazar archivo de subtítulos</string>
   <string Field="CYN_Old_Subtitle_Replace" Original="Old subtitle File present: overwrite?">Hay un archivo de subtítulos antiguo: ¿Sobreescribir?</string>
   <string Field="RecentlyAdded" Original="Recently Added">Añadido recientemente</string>
   <string Field="TVDB_ERROR_TITLE" Original="theTVDB Error">Error de theTVDB</string>
   <string Field="TVDB_INFO_TITLE" Original="theTVDB">theTVDB</string>
   <string Field="TVDB_INFO_ACCOUNTID_1" Original="Account Identifier is not set">Datos de cuenta no establecidos</string>
   <string Field="TVDB_INFO_ACCOUNTID_2" Original="Enter your online account ID in Configuration">Introduzca sus datos de cuenta en Configuración</string>
-  <string Field="ShowSeriesFanart" Original="Show Fanart in Series View">Mostrar Fanart en la Vista de Series</string>
+  <string Field="ShowSeriesFanart" Original="Show Fanart in Series View">Mostrar Fanart en la vista de Series</string>
   <string Field="ChangeLayout" Original="Change Layout">Cambiar diseño</string>
   <string Field="UseOnlineFavourites" Original="Use Online Favourites">Usar Favoritos Online</string>
   <string Field="AddToPlaylist" Original="Add To Playlist">Añadir a la Lista de Reproducción</string>
@@ -136,27 +135,27 @@
   <string Field="DeleteFromDatabase" Original="Delete from Database">Borrar de la base de datos</string>
   <string Field="DeleteFromFileDatabase" Original="Delete from Disk and Database">Borrar del disco y de la base de datos</string>
   <string Field="RateDialogLabel" Original="Select Your Rating for {0}">Elija su puntuación para {0}</string>
-  <string Field="Hide_thumbnail_on_unwatched" Original="Hide Spoiler Thumbnails">Ocultar miniaturas de spoilers</string>
+  <string Field="Hide_thumbnail_on_unwatched" Original="Hide Spoiler Thumbnails">Ocultar miniaturas de episodios no vistos</string>
   <string Field="RateFiveStarOne" Original="Terrible">Terrible</string>
   <string Field="RateFiveStarTwo" Original="Mediocre">Mediocre</string>
-  <string Field="RateFiveStarThree" Original="Good">Buena</string>
-  <string Field="RateFiveStarFour" Original="Superb">Magnífica</string>
-  <string Field="RateFiveStarFive" Original="Perfect">Perfecta</string>
-  <string Field="RateTenStarOne" Original="Abysmal">Pésima</string>
+  <string Field="RateFiveStarThree" Original="Good">Bueno</string>
+  <string Field="RateFiveStarFour" Original="Superb">Magnífico</string>
+  <string Field="RateFiveStarFive" Original="Perfect">Perfecto</string>
+  <string Field="RateTenStarOne" Original="Abysmal">Pésimo</string>
   <string Field="RateTenStarTwo" Original="Terrible">Terrible</string>
-  <string Field="RateTenStarThree" Original="Bad">Mala</string>
+  <string Field="RateTenStarThree" Original="Bad">Malo</string>
   <string Field="RateTenStarFour" Original="Poor">Pobre</string>
   <string Field="RateTenStarFive" Original="Mediocre">Mediocre</string>
   <string Field="RateTenStarSix" Original="Fair">Regular</string>
-  <string Field="RateTenStarSeven" Original="Good">Buena</string>
-  <string Field="RateTenStarEight" Original="Great">Estupenda</string>
-  <string Field="RateTenStarNine" Original="Superb">Magnífica</string>
-  <string Field="RateTenStarTen" Original="Perfect">Perfecta</string>
+  <string Field="RateTenStarSeven" Original="Good">Bueno</string>
+  <string Field="RateTenStarEight" Original="Great">Estupendo</string>
+  <string Field="RateTenStarNine" Original="Superb">Magnífico</string>
+  <string Field="RateTenStarTen" Original="Perfect">Perfecto</string>
   <string Field="ContentRating" Original="Content Rating">Puntuación</string>
   <string Field="ViewTags" Original="View Tags">Ver Etiquetas</string>
   <string Field="AddViewTag" Original="Add Series to View Tag">Añadir Serie a la vista</string>
   <string Field="RemoveViewTag" Original="Remove Series from View Tag">Quitar Serie de la vista</string>
-  <string Field="NewViewTag" Original="New Tag">Nueva Vista</string>
+  <string Field="NewViewTag" Original="New Tag">Nueva vista</string>
   <string Field="CycleSeriesBanner" Original="Cycle Series Banner">Alternar Banner de Series</string>
   <string Field="CycleSeasonBanner" Original="Cycle Season Banner">Alternar Banner de Temporada</string>
   <string Field="CycleSeriesPoster" Original="Cycle Series Poster">Alternar Poster de Series</string>
@@ -199,8 +198,8 @@
   <string Field="RateDialog">Diálogo de Puntuaciones</string>
   <string Field="PinCodeDialog">Diálogo de Código PIN</string>
   <string Field="Aired">Emitido</string>
-  <string Field="AiredStatusContinuing">Continuando</string>
-  <string Field="AiredStatusEnded">Finalizado</string>
+  <string Field="AiredStatusContinuing">Emitiéndose</string>
+  <string Field="AiredStatusEnded">Finalizada</string>
   <string Field="Airs">Emisión</string>
   <string Field="AirsDay">Día de Emisión</string>
   <string Field="AirsTime">Hora de Emisión</string>
@@ -233,4 +232,6 @@
   <string Field="NETWORK_ERROR_UNAVAILABLE_1">Conexión de red  no disponible</string>
   <string Field="NETWORK_ERROR_UNAVAILABLE_2">Compruebe su conexión e inténtelo de nuevo</string>
   <string Field="Playlist">Lista de Reproducción</string>
+  <string Field="LastOnlineUpdate">Última actualización Online</string>
+  <string Field="ResetIgnoredDownloadedFiles">Reinicializar los archivos descargados ignorados</string>
 </strings>
